tests/algorithms/x/Java/data_structures/binary_tree/is_sum_tree.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:20: error: incompatible types: int cannot be converted to BigInteger
            return 0;
                   ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:48: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(11, 1, 2), new Node(2, 3, 4), new Node(29, 5, 6), new Node(1, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(7, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(15, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(40, 7, ((java.math.BigInteger.valueOf(1)).negate())), new Node(35, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                   ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:48: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(11, 1, 2), new Node(2, 3, 4), new Node(29, 5, 6), new Node(1, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(7, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(15, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(40, 7, ((java.math.BigInteger.valueOf(1)).negate())), new Node(35, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                       ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:48: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(11, 1, 2), new Node(2, 3, 4), new Node(29, 5, 6), new Node(1, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(7, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(15, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(40, 7, ((java.math.BigInteger.valueOf(1)).negate())), new Node(35, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                                          ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:48: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(11, 1, 2), new Node(2, 3, 4), new Node(29, 5, 6), new Node(1, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(7, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(15, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(40, 7, ((java.math.BigInteger.valueOf(1)).negate())), new Node(35, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                                                              ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:48: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(11, 1, 2), new Node(2, 3, 4), new Node(29, 5, 6), new Node(1, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(7, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(15, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(40, 7, ((java.math.BigInteger.valueOf(1)).negate())), new Node(35, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                                                                                                                                                                       ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:48: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(11, 1, 2), new Node(2, 3, 4), new Node(29, 5, 6), new Node(1, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(7, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(15, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(40, 7, ((java.math.BigInteger.valueOf(1)).negate())), new Node(35, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                                                                                                                                                                                                                                                                                ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:48: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(11, 1, 2), new Node(2, 3, 4), new Node(29, 5, 6), new Node(1, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(7, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(15, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(40, 7, ((java.math.BigInteger.valueOf(1)).negate())), new Node(35, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                                                                                                                                                                                                                                                                                                                                                                                          ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:48: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(11, 1, 2), new Node(2, 3, 4), new Node(29, 5, 6), new Node(1, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(7, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(15, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(40, 7, ((java.math.BigInteger.valueOf(1)).negate())), new Node(35, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:52: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(26, 1, 2), new Node(10, 3, 4), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), 5), new Node(4, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(6, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                   ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:52: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(26, 1, 2), new Node(10, 3, 4), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), 5), new Node(4, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(6, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                       ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:52: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(26, 1, 2), new Node(10, 3, 4), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), 5), new Node(4, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(6, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                                           ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:52: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(26, 1, 2), new Node(10, 3, 4), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), 5), new Node(4, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(6, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                                                                                                         ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:52: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(26, 1, 2), new Node(10, 3, 4), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), 5), new Node(4, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(6, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                                                                                                                                                                                                                  ^
/tmp/TestJavaTranspiler_Algorithms_Golden185_is_sum_tree4194520502/001/Main.java:52: error: incompatible types: int cannot be converted to BigInteger
        return new Node[]{new Node(26, 1, 2), new Node(10, 3, 4), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), 5), new Node(4, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(6, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate())), new Node(3, ((java.math.BigInteger.valueOf(1)).negate()), ((java.math.BigInteger.valueOf(1)).negate()))};
                                                                                                                                                                                                                                                                                                                                                           ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
15 errors
